<resources>
    <string name="app_name">Airline</string>
    <string name="welcome">Welcome to my Airline Application!</string>
    <string name="say_hello">Say hello</string>
    <string name="new_airline">Create a New Airline</string>
    <string name="new_flight">Enter a New Flight</string>
    <string name="view_airline">View an Airline\'s Flights (Pretty)</string>
    <string name="search_flights">Search Flights Between Two Airports</string>
    <string name="save_file">Save an Airline to a File</string>
    <string name="help">HELP</string>
    <string name="plane_emoji">✈️</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_to_main">← Back to Main</string>
    <string name="confirm">Confirm</string>
    <string name="enter_airline_prompt">Enter the name of your new Airline:</string>
    <string name="enter_flight_prompt">Enter the information for your new Flight:</string>
    <string name="enter_here">Enter here...</string>
    <string name="enter_flight_number">Enter Flight Number...</string>
    <string name="enter_source_aiport_code">Enter Source Aiport Code</string>
    <string name="enter_departure_time">Enter Departure Time...</string>
    <string name="enter_destination_airport_code">Enter Destination Airport Code...</string>
    <string name="enter_arrival_time">Enter Arrival Time...</string>
    <string name="enter_airline_to_add_to">Enter Airline to Add to</string>
    <string name="enter_pretty_airline">Enter the name of the Airline to pretty-print:</string>
    <string name="enter_the_name_of_the_airline_to_save">Enter the name of the airline to save:</string>
    <string name="readme">README\nName: Yasmine Saleh\nCourse: CS 410: The Joy of Coding with Java and Android\nInstructor: David Whitlock\nAssignment: Project 5: A Small Device Application for an Airline\n\nWelcome to my Airline Android Application. This app can create new airlines and flight based on the fields you enter. You can add new airlines, add new flights to an airline, save an airline\'s contents to a file, view a specific airline\'s flights in pretty format, or search for an airline\'s flights between two airports."</string>
</resources>