<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newFlightActivity">

    <!-- back to main button -->
    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="64dp"
        android:text="@string/back_to_main"
        android:onClick="backToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="641dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- confirm button  -->

        <!-- enter airline prompt  -->

        <!-- Text box for entering airline name
        Reference for "android:hint" line: AI overview from Google search "how to make initial text disappear when typing in text box in android studio" -->
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="251dp"
            android:layout_height="85dp"
            android:onClick="addNewFlight"
            android:text="@string/confirm"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926" />

        <TextView
            android:id="@+id/enterFlightPrompt"
            android:layout_width="406dp"
            android:layout_height="87dp"
            android:inputType="none"
            android:text="@string/enter_flight_prompt"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/enter_flight_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="280dp"
            android:ems="10"
            android:hint="@string/enter_flight_number"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.743" />

        <EditText
            android:id="@+id/enter_flights_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="344dp"
            android:ems="10"
            android:hint="@string/enter_airline_to_add_to"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/enter_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="212dp"
            android:ems="10"
            android:hint="@string/enter_source_aiport_code"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.808" />

        <EditText
            android:id="@+id/enter_depart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="152dp"
            android:ems="10"
            android:hint="@string/enter_departure_time"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.922" />

        <EditText
            android:id="@+id/enter_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:ems="10"
            android:hint="@string/enter_destination_airport_code"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.956" />

        <EditText
            android:id="@+id/enter_arrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/enter_arrival_time"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFlightPrompt"
            app:layout_constraintVertical_bias="0.973" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>