<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prettyAirlineActivity">

    <!-- back to main button -->
    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="64dp"
        android:text="@string/back_to_main"
        android:onClick="backToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="636dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957">

        <!-- confirm button  -->

        <!-- enter airline prompt  -->

        <!-- Text box for entering airline name
        Reference for "android:hint" line: AI overview from Google search "how to make initial text disappear when typing in text box in android studio" -->
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="251dp"
            android:layout_height="85dp"
            android:onClick="printAirline"
            android:text="@string/confirm"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.932" />

        <TextView
            android:id="@+id/enterAirlinePrompt"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="none"
            android:text="@string/enter_pretty_airline"
            android:textAlignment="center"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042" />

        <EditText
            android:id="@+id/enter_airline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_here"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterAirlinePrompt"
            app:layout_constraintVertical_bias="0.044" />

        <!-- Reference: AI overview from google search "how to wrap edittext in android studio" -->
        <EditText
            android:id="@+id/displayedAirline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_airline_name"
            app:layout_constraintVertical_bias="0.43" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>